fix min width on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@ html, body{
     margin: 0 auto;
     display: inline-block;
     /*padding: 30px;*/
-    min-width: 390px;
+    min-width: 320px;
     max-width: 500px;
     border-radius: 5px;
     transform: translate(-50%, -1000%) scale(0);
